# remote-render

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Main.qml  framestream.cpp  framestream.h  framestreamview.cpp  framestreamview.h  main.cpp  qmleventlistener.cpp  qmleventlistener.h
src/common/: concurrentsegment.cpp  concurrentsegment.h  symmetricpulsegenerator.cpp  symmetricpulsegenerator.h
src/daemon/: CMakeLists.txt  Main.qml  main.cpp  qmlconcurrentsegment.cpp  qmlconcurrentsegment.h  qmleventrelay.cpp  qmleventrelay.h
